build/log/idf_py_stderr_output_546566
In file included from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/andrespf02/esp/final2/person_detection/main/main_functions.cc:22:
/home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/andrespf02/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /home/andrespf02/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/andrespf02/esp/final2/person_detection/managed_components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/andrespf02/esp/final2/person_detection/main/detection_responder.h:22,
                 from /home/andrespf02/esp/final2/person_detection/main/main_functions.cc:18:
/home/andrespf02/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc: In function 'void setup()':
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:37:17: error: invalid conversion from 'int' to 'gpio_num_t' [-fpermissive]
   37 | #define LED_PIN 2
      |                 ^
      |                 |
      |                 int
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:75:18: note: in expansion of macro 'LED_PIN'
   75 |   gpio_reset_pin(LED_PIN);
      |                  ^~~~~~~
In file included from /home/andrespf02/esp/final2/person_detection/main/main_functions.cc:35:
/home/andrespf02/esp/idf/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:82:37: note:   initializing argument 1 of 'esp_err_t gpio_reset_pin(gpio_num_t)'
   82 | esp_err_t gpio_reset_pin(gpio_num_t gpio_num);
      |                          ~~~~~~~~~~~^~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:37:17: error: invalid conversion from 'int' to 'gpio_num_t' [-fpermissive]
   37 | #define LED_PIN 2
      |                 ^
      |                 |
      |                 int
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:76:22: note: in expansion of macro 'LED_PIN'
   76 |   gpio_set_direction(LED_PIN, GPIO_MODE_OUTPUT);
      |                      ^~~~~~~
/home/andrespf02/esp/idf/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:170:41: note:   initializing argument 1 of 'esp_err_t gpio_set_direction(gpio_num_t, gpio_mode_t)'
  170 | esp_err_t gpio_set_direction(gpio_num_t gpio_num, gpio_mode_t mode);
      |                              ~~~~~~~~~~~^~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc: In function 'void loop()':
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:176:20: error: expected primary-expression before ')' token
  176 | if (/* condition */)
      |                    ^
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:37:17: error: invalid conversion from 'int' to 'gpio_num_t' [-fpermissive]
   37 | #define LED_PIN 2
      |                 ^
      |                 |
      |                 int
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:185:22: note: in expansion of macro 'LED_PIN'
  185 |       gpio_set_level(LED_PIN, 1);
      |                      ^~~~~~~
/home/andrespf02/esp/idf/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:141:37: note:   initializing argument 1 of 'esp_err_t gpio_set_level(gpio_num_t, uint32_t)'
  141 | esp_err_t gpio_set_level(gpio_num_t gpio_num, uint32_t level);
      |                          ~~~~~~~~~~~^~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:37:17: error: invalid conversion from 'int' to 'gpio_num_t' [-fpermissive]
   37 | #define LED_PIN 2
      |                 ^
      |                 |
      |                 int
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:187:22: note: in expansion of macro 'LED_PIN'
  187 |       gpio_set_level(LED_PIN, 0);
      |                      ^~~~~~~
/home/andrespf02/esp/idf/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:141:37: note:   initializing argument 1 of 'esp_err_t gpio_set_level(gpio_num_t, uint32_t)'
  141 | esp_err_t gpio_set_level(gpio_num_t gpio_num, uint32_t level);
      |                          ~~~~~~~~~~~^~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc: In function 'void run_inference(void*)':
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:219:38: warning: unused variable 'icount_start' [-Wunused-variable]
  219 |   unsigned ccount_start, ccount_end, icount_start, icount_end;
      |                                      ^~~~~~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:232:13: warning: unused variable 'endTimeTotal' [-Wunused-variable]
  232 |   long long endTimeTotal = 0;
      |             ^~~~~~~~~~~~
/home/andrespf02/esp/final2/person_detection/main/main_functions.cc:233:13: warning: unused variable 'startTimePre' [-Wunused-variable]
  233 |   long long startTimePre = 0;
      |             ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
